--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "./dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "node ./dist/app/server.ts",
-    "dev": "ts-node-dev --respawn --transpile-only ./src/app/server.ts",
+    "prod": "node ./dist/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "lint": "npx eslint .",
-    "lint:fix": "npx eslint . --fix"
+    "lint:fix": "npx eslint . --fix",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
